--- a/insurance data.ipynb
+++ b/insurance data.ipynb
@@ -20,7 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "insurance =pd.read_csv(r'C:\\Users\\febat\\OneDrive\\Desktop\\Analystbuilder\\python\\Data Exploration\\health_insurance.csv')"
+    "insurance =pd.read_csv(r'C:\\Users\\febat\\OneDrive\\Desktop\\python\\Data Exploration\\health_insurance.csv')"
    ]
   },
   {
